Fix left shift of search bar to cover full div

--- a/src/Components/Searchbar/Searchbar.css
+++ b/src/Components/Searchbar/Searchbar.css
@@ -56,3 +56,7 @@ input:focus {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.muiSearchField {
+  width: "100%";
+}
